--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
     />
 
     <title>Calculateur CO2</title>
+    <style>
+      html {
+        background-color: #379683;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
