--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,900"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,300;1,900&display=swap" rel="stylesheet">
+
 
     <title>Calculateur CO2</title>
     <style>
