--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
 
-    <title>Calculateur CO2</title>
+    <title>Mes Équivalents CO2e</title>
     <style>
       html {
         background-color: #379683;
