--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,33 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#05386B" />
-    <meta name="description" content="Mes Équivalents CO2e" />
+    <!-- Primary Meta Tags -->
+    <title>Mon Convertisseur CO2e</title>
+    <meta name="title" content="Mon Convertisseur CO2e" />
+    <meta
+      name="description"
+      content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://monconvertisseurco2.fr" />
+    <meta property="og:title" content="Mon Convertisseur CO2e" />
+    <meta
+      property="og:description"
+      content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/metaimage.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://monconvertisseurco2.fr" />
+    <meta property="twitter:title" content="Mon Convertisseur CO2e" />
+    <meta
+      property="twitter:description"
+      content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/metaimage.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,16 +52,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,300;1,900&display=swap"
       rel="stylesheet"
     />
-
-    <title>Mes Équivalents CO2e</title>
-    <style>
-      html {
-        background-color: #379683;
-      }
-    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Visualisez facilement un poids en CO2e grâce à ce convertisseur, et
+      découvrez quels sont les gestes climat qui comptent vraiment.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
