Update url metaimage

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,10 @@
       property="og:description"
       content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/metaimage.png" />
+    <meta
+      property="og:image"
+      content="https://monconvertisseurco2.fr/metaimage.png"
+    />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -31,7 +34,10 @@
       property="twitter:description"
       content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/metaimage.png" />
+    <meta
+      property="twitter:image"
+      content="https://monconvertisseurco2.fr/metaimage.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
