--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,8 @@
       rel="stylesheet"
     />
 
+    <script src="https://polyfill.io/v3/polyfill.min.js"></script>
+
     <!-- Matomo -->
     <script type="text/javascript">
       var _paq = window._paq || []
