--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       rel="stylesheet"
     />
 
-    <script src="https://polyfill.io/v3/polyfill.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
 
     <!-- Matomo -->
     <script type="text/javascript">
