Footer, Share, etc...

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#05386B" />
     <!-- Primary Meta Tags -->
-    <title>Mon Convertisseur CO2e</title>
-    <meta name="title" content="Mon Convertisseur CO2e" />
+    <title>Mon Convertisseur CO2</title>
+    <meta name="title" content="Mon Convertisseur CO2" />
     <meta
       name="description"
       content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
@@ -16,7 +16,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://monconvertisseurco2.fr" />
-    <meta property="og:title" content="Mon Convertisseur CO2e" />
+    <meta property="og:title" content="Mon Convertisseur CO2" />
     <meta
       property="og:description"
       content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
@@ -29,7 +29,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://monconvertisseurco2.fr" />
-    <meta property="twitter:title" content="Mon Convertisseur CO2e" />
+    <meta property="twitter:title" content="Mon Convertisseur CO2" />
     <meta
       property="twitter:description"
       content="Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
