--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#05386B" />
+
     <!-- Primary Meta Tags -->
     <title>Mon Convertisseur CO2</title>
     <meta name="title" content="Mon Convertisseur CO2" />
@@ -12,6 +11,16 @@
       name="description"
       content="Visualisez facilement un poids en CO2 grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment."
     />
+
+    <!-- Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffffdb" />
+    <meta name="msapplication-TileColor" content="#ffffdb" />
+    <meta name="theme-color" content="#ffffdb" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -38,21 +47,7 @@
       property="twitter:image"
       content="https://monconvertisseurco2.fr/metaimage.png"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,300;1,900&display=swap"
@@ -83,6 +78,7 @@
     </script>
     <!-- End Matomo Code -->
   </head>
+
   <body>
     <noscript
       >Visualisez facilement un poids en CO2 grâce à ce convertisseur, et
