--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffffdb" />
-    <meta name="msapplication-TileColor" content="#ffffdb" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#379683" />
+    <meta name="msapplication-TileColor" content="#379683" />
     <meta name="theme-color" content="#ffffdb" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
