Add plausible tracking

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,12 @@
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver%2CString.prototype.replaceAll"></script>
 
+    <script
+      defer
+      data-domain="monconvertisseurco2.fr"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
+
     <!-- Matomo -->
     <script type="text/javascript">
       var _paq = window._paq || []
