temp: reel web component

--- a/public/test/iframe.html
+++ b/public/test/iframe.html
@@ -1,10 +1,7 @@
 <html>
   <head> </head>
   <body>
-    <script
-      name="impact-co2"
-      src="http://localhost:3000/iframe.js"
-      data-type="transport"
-      data-search="?theme=default&language=fr&km=10&defaultMode=comparison"></script>
+    <script src="http://localhost:3000/webcomponents/etiquette.js"></script>
+    <etiquette-ico2 comparisons='["random", "tgv"]' value="120" animated="true" />
   </body>
 </html>
